@@ -9,6 +9,7 @@ Version 0.2.8 (2011-05-??)
 - Added support for conditionalselect as conditionField
 - Improved: Do not allow negative cart/order totals
 - Improved: Do not cache arrData from IsotopeProduct, return NULL for non-existing values
+- Improved backend order listing (Ticket #424)
 - Fixed issue with email address on checkout
 - Fixed potential product load problem in IsotopeProductCollection
 - Fixed potential problem with rule product restrictions
